Gemba App changes

--- a/templates/gemba/downtime_user_view.html
+++ b/templates/gemba/downtime_user_view.html
@@ -27,7 +27,7 @@
         <tbody>
         {% if items_list.all|length == 0 %}
               <tr>
-                <td colspan='5'>0 reasons recorded</td>
+                <td colspan='5'>No reasons to select</td>
               </tr>
         {% endif %}
     <tr>
@@ -113,4 +113,5 @@
         </tbody>
     </table>
 </div>
+Use the "Set up" reason only when you are changing the machine from one job to another.
 {% endblock %}
