--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -78,7 +78,7 @@
             <th scope="col">Job</th>
             <th scope="col" class="central_pos">Output</th>
             <th scope="col" class="central_pos">Total Good</th>
-            <th scope="col" class="central_pos">Reworked good</th>
+            <th scope="col" class="central_pos">Reworked Good</th>
             <th scope="col" class="central_pos">Scrap</th>
             <th scope="col" class="central_pos">Takt time</th>
             <th scope="col" class="central_pos">Ops</th>
