--- a/templates/gemba/pareto_details_search.html
+++ b/templates/gemba/pareto_details_search.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load widget_tweaks %}
 {% load mathfilters %}
-<h4>Productivity View:</h4>
+<h4>Produced View:</h4>
 <table class="table table-hover">
         <thead>
             <tr>
