--- a/templates/gemba/pareto_details_view.html
+++ b/templates/gemba/pareto_details_view.html
@@ -2,7 +2,7 @@
 {% block content %}
 {% load widget_tweaks %}
 {% load mathfilters %}
-<h4>Productivity View:</h4>
+<h4>Produced View:</h4>
 <form action="{% url 'gemba_app:pareto-details-search-result' %}" method="get">
     <input name="q" type="text" placeholder="Search...">
  </form>
