--- a/templates/gemba/scrap_rate.html
+++ b/templates/gemba/scrap_rate.html
@@ -103,7 +103,7 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
             </tr>
         {% endfor %}
         <tr style="central_pos; font-size:0.7vw;">
-            <td style="text-align:left;"><b>Total scraps</b></td>
+            <td style="text-align:left;"><b>Total Scrap Qty</b></td>
             <td><b>{% if totals.total_weekly_0 == 0 %}{% else %}{{ totals.total_weekly_0 }}{% endif %}</b></td>
             <td><b>{% if totals.overall_scrap_rate_0 == 0 %}{% else %}{{ totals.overall_scrap_rate_0 }}%{% endif %}</b> </td>
             <td><b>{% if totals.total_weekly_1 == 0 %}{% else %}{{ totals.total_weekly_1 }}{% endif %}</b></td>
