--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -32,6 +32,7 @@
         {% endfor %}
         </tbody>
 </table>
+{% if user.is_superuser %}
 <div><a href="{% url 'gemba_app:export_daily_oee_report' %}?{{request.GET.urlencode}}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export to Excel file
 </button></a></div>
@@ -39,4 +40,5 @@
 <div><a href="{% url 'gemba_app:export-to-gemba' %}?{{request.GET.urlencode}}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export to Gemba file
 </button></a></div>
+{% endif %}
 {% endblock %}
