--- a/templates/gemba/pareto_details.html
+++ b/templates/gemba/pareto_details.html
@@ -130,17 +130,19 @@
 </div>
 </div>
 </div>
-
-<div class = "row">
+    {% if user.is_superuser %}
+    <div class = "row">
   <div class = "col">
-{% if user.is_admin %}
 <p><a href="{% url 'gemba_app:open-pareto' pareto_list.id %}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Open Pareto
 </button></a></p>
-{% endif %}
 <p><a href="{% url 'gemba_app:tableau' pk=pareto_list.id %}">
 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export Tableau file
 </button></a></p>
+      <p><a href="{% url 'gemba_app:export-pareto-to-pdf' pk=pareto_list.id %}">
+<button name="pdf" type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Export Pareto pdf file
+</button></a></p>
+  </div>
     </div>
-</div>
+    {% endif %}
 {% endblock %}
