--- a/templates/gemba/pareto.html
+++ b/templates/gemba/pareto.html
@@ -81,7 +81,7 @@
             <th scope="col" class="central_pos">Reworked Good</th>
             <th scope="col" class="central_pos">Scrap</th>
             <th scope="col" class="central_pos">Takt time</th>
-            <th scope="col" class="central_pos">Ops</th>
+            <th scope="col" class="central_pos">OPs</th>
             <th scope="col" class="central_pos">Last Entry</th>
         </tr>
         </thead>
