Gemba App changes

--- a/templates/gemba/pareto_view.html
+++ b/templates/gemba/pareto_view.html
@@ -38,13 +38,12 @@ Select a date
         <tr>
             <td colspan="3"><b>Average Daily OEE Elements</b></td>
             <td></td>
-            <td></td>
+            <td><b>{{ sum_ops }}</b></td>
             <td><b>{{ avg_availability }}%</b></td>
             <td><b>{{ avg_performance }}%</b></td>
             <td><b>{{ avg_quality }}%</b></td>
             <td><b>{{ avg_oee }}%</b></td>
         </tr>
-
         </tbody>
 </table>
 {% endblock %}
