--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -19,7 +19,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for item in object_list %}
+        {% for item in object_list|slice:":-1" %}
         <tr>
             <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></td>
             <td>{{ item.line }}</td>
@@ -32,6 +32,17 @@
             <td>{{ item.oee }}%</td>
         </tr>
         {% endfor %}
+        <tr>
+        {% with object_list|last as last %}
+            <td colspan="3"><b>Average Daily OEE Elements</b></td>
+            <td></td>
+            <td><b>{{ last.sum_ops }}</b></td>
+            <td><b>{{ last.avg_availability }}%</b></td>
+            <td><b>{{ last.avg_performance }}%</b></td>
+            <td><b>{{ last.avg_quality }}%</b></td>
+            <td><b>{{ last.avg_oee }}%</b></td>
+        {% endwith %}
+        </tr>
         </tbody>
 </table>
 {% if user.is_superuser %}
