--- a/templates/gemba/scrap_rate.html
+++ b/templates/gemba/scrap_rate.html
@@ -14,6 +14,7 @@
 </head>
 <h4>Scrap rate by week</h4>
 Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
+<div style="overflow-x:auto;">
 <table class="table table-bordered">
         <thead>
         <tr style="font-size:0.7vw;">
@@ -140,4 +141,5 @@ Week starts on Sunday at 21:45 for each line. W/C shows Monday dates.
         </tr>
         </tbody>
     </table>
+</div>
 {% endblock %}
