Gemba app changes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,10 +16,10 @@
             <th scope="col">Total Scrap</th>
             <th scope="col">Total Rework</th>
             <th scope="col">Total Available Time</th>
-            <th scope="col">Avg Availability</th>
-            <th scope="col">Avg Performance</th>
-            <th scope="col">Avg Quality</th>
-            <th scope="col">Avg OEE</th>
+            <th scope="col">Average Availability</th>
+            <th scope="col">Average Performance</th>
+            <th scope="col">Average Quality</th>
+            <th scope="col">Average OEE</th>
         </tr>
         </thead>
         <tbody>
