--- a/templates/gemba/pareto_before_close.html
+++ b/templates/gemba/pareto_before_close.html
@@ -8,7 +8,7 @@
 <br/>
 <br/>
     <h4 style="text-align:left;">PARETO FINAL VERSION
-    <span style="float:right;">Line: {{ user }}</span></h4>
+    <span style="float:right;">{{ pareto_list.line }}</span></h4>
 <p>Date: {{ pareto_list.pareto_date|date:"d-m-Y" }}</p>
 <p> {{ pareto_list.shift }} - {{ pareto_list.hours }} hours -
     Operators: {{ pareto_list.ops }} - Available time: {{ available_time }} min - Not scheduled to run:
