--- a/templates/gemba/quarantine_view.html
+++ b/templates/gemba/quarantine_view.html
@@ -15,7 +15,7 @@
         <tbody>
         {% for object in quarantine_qs %}
             <tr>
-                <td><a href="{% url 'gemba_app:quarantine-detail' pk=object.pk %}">
+                <td><a href="{% url 'gemba_app:quarantine-detail' scrap_id=object.pk %}">
                     {{ object.modified|date:'d-m-Y H:i' }}</a></td>
                 <td>{{ object.line }}</td>
                 <td>{{ object.qty }}</td>
