--- a/templates/gemba/pareto_quarantine.html
+++ b/templates/gemba/pareto_quarantine.html
@@ -2,9 +2,9 @@
 {% block content %}
 {% load mathfilters %}
 <h4>Pareto Quarantine Detail View</h4>
-Do you want to resolve quarantine case now? <a href="{% url 'gemba_app:quarantine-case-detail' scrap_id=scrap_id pareto_id=pareto_list.id %}">
-    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search">Yes</span>
-    </button></a>
+Do you want to resolve quarantine case now?
+<a href="{% url 'gemba_app:quarantine-case-detail' scrap_id=scrap_id pareto_id=pareto_list.id %}">
+<button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-search">Yes</span></button></a>
 <br/>
 <br/>
 <table class="table table-hover">
