--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,11 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container fixed">
+        {% if user.is_authenticated %}
         <a class="navbar-brand" href="{% url 'gemba_app:dashboard' %}">Production</a>
+        {% else %}
+        <a class="navbar-brand" href="{% url 'homepage' %}">Production</a>
+        {% endif %}
         <button
           class="navbar-toggler" type="button"
           data-toggle="collapse" data-target="#navbarNavAltMarkup"
