Gemba App changes

--- a/templates/gemba/index.html
+++ b/templates/gemba/index.html
@@ -3,6 +3,7 @@
         <p><a href="{% url 'gemba_app:pareto-view' %}">Daily OEE Report</a></p>
         <p><a href="{% url 'gemba_app:report-choices-2' %}">Pareto View</a></p>
         <p><a href="{% url 'gemba_app:pareto-details' %}">Produced View</a></p>
+        <p><a href="{% url 'gemba_app:report-choices-3' %}">Weekly Pareto Compare View</a></p>
         <p><a href="{% url 'gemba_app:downtimes-view' %}">Downtimes View</a></p>
         <p><a href="{% url 'gemba_app:lines-2' %}">Downtime Rate by Week</a></p>
         <p><a href="{% url 'gemba_app:scraps-view' %}">Scrap View</a></p>
