Gemba App changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
+    <link rel="stylesheet" href="{% static 'table_hover.css' %}">
     <title>Tool Life & Gemba App</title>
   </head>
 
