--- a/templates/gemba/report_choices_3.html
+++ b/templates/gemba/report_choices_3.html
@@ -2,11 +2,15 @@
 {% block content %}
 
  <form action="{% url 'gemba_app:weekly-report-by-line' %}" method="get">
-     <h4>Select a date:</h4>
-     </br>
-    Date <input name="date_to_display" type="date">
     </br>
-    </br>
+     <h4>Select the Monday that starts the week:</h4>
+        {% for w in week_list %}
+        <tr>
+            <td>{{w}}&nbsp;&nbsp;<input type="radio" name="Week" value="{{w}}"></td>
+            </br>
+        </tr>
+        {% endfor %}
+      </br>
      <h4>Select a shift:</h4>
         {% for s in shift_list %}
         <tr>
