--- a/templates/gemba/weekly_report_by_line.html
+++ b/templates/gemba/weekly_report_by_line.html
@@ -20,7 +20,8 @@
 <h4>Pareto Weekly Compare Report</h4>
 <br/>
 <br/>
-<table>
+
+<table class="table table-bordered">
     <thead>
         <tr>
             <th scope="col">Day</th>
@@ -90,5 +91,4 @@
         {% endfor %}
     </tbody>
 </table>
-
 {% endblock %}
