--- a/static/table_hover.css
+++ b/static/table_hover.css
@@ -5,6 +5,11 @@ table {
   z-index: 1;
 }
 
+body {
+  background-color: aliceblue;
+  z-index: 0;
+}
+
 td, th {
   padding: 10px;
   position: relative;
@@ -48,5 +53,5 @@ tbody th:focus::before {
   left: -5000px;
   position: absolute;
   width: 10000px;
-  z-index: -1;
+  z-index: 0;
 }
