--- a/templates/gemba/daily_oee_report.html
+++ b/templates/gemba/daily_oee_report.html
@@ -21,7 +21,7 @@
         <tbody>
         {% for item in object_list|slice:":-1" %}
         <tr>
-            <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></td>
+            <th><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></th>
             <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
             <td>{% if item.job_otg is None %} ----- {% else %} {{ item.job_otg }} {% endif %}</td>
