--- a/templates/gemba/pareto_view.html
+++ b/templates/gemba/pareto_view.html
@@ -24,7 +24,7 @@ Select a date
         <tbody>
         {% for item in report_list %}
         <tr>
-            <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></td>
+            <th><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></th>
             <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
             <td>{% if item.job_otg is None %} ----- {% else %} {{ item.job_otg }} {% endif %}</td>
