--- a/templates/gemba/paretos_view.html
+++ b/templates/gemba/paretos_view.html
@@ -18,7 +18,7 @@
         <tbody>
         {% for item in page_obj %}
         <tr>
-            <td><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></td>
+            <th><a href="{% url 'gemba_app:pareto-detail-view' pk=item.id %}">{{ item.id }}</a></th>
             <td>{{ item.pareto_date|date:"d-m-Y" }}</td>
             <td>{{ item.line }}</td>
             <td>{{ item.shift }}</td>
